syntax = "proto3";

package order;

option go_package = "github.com/alibekkenny/simple-marketplace/order-service/proto;order";

service CartService {
    // card related rpcs
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc UpdateCartItem(UpdateCartItemRequest) returns (UpdateCartItemResponse);
    rpc RemoveCartItem(RemoveCartItemRequest) returns (RemoveCartItemResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
    rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
}

message CartItem {
    int64 product_offer_id = 1;
    int32 quantity = 2;
}

message AddToCartRequest {
    int64 user_id = 1;
    int64 product_offer_id = 2;
    int32 quantity = 3;
}
message AddToCartResponse {
    bool success = 1;
}

message UpdateCartItemRequest {
    int64 user_id = 1;
    int64 product_offer_id = 2;
    int32 quantity = 3; // if 0 â†’ remove
}
message UpdateCartItemResponse {
    bool success = 1;
}

message RemoveCartItemRequest {
    int64 user_id = 1;
    int64 product_offer_id = 2;
}
message RemoveCartItemResponse {
    bool success = 1;
}

message GetCartRequest {
    int64 user_id = 1;
}
message GetCartResponse {
    repeated CartItem items = 1;
}

message ClearCartRequest {
    int64 user_id = 1;
}
message ClearCartResponse {
    bool success = 1;
}
